[gd_scene load_steps=10 format=3 uid="uid://dcf7dxx8ug7ig"]

[ext_resource type="PackedScene" uid="uid://dtd1hmqjd7303" path="res://scenes/earth_scene.tscn" id="1_31fs6"]
[ext_resource type="Script" path="res://src/globe.gd" id="1_ofnld"]
[ext_resource type="PackedScene" uid="uid://b0bh1mvyfee8f" path="res://scenes/marker.tscn" id="2_gcll6"]
[ext_resource type="Script" path="res://src/CameraManager.gd" id="3_8x4wl"]
[ext_resource type="Script" path="res://src/DataManager.gd" id="5_3j5ia"]
[ext_resource type="Environment" uid="uid://dh4be725y63ep" path="res://assets/environments/world.tres" id="5_scv8l"]
[ext_resource type="Script" path="res://src/UI.gd" id="6_styet"]
[ext_resource type="Theme" uid="uid://bwjbjq5wytn2g" path="res://assets/themes/base_theme.tres" id="6_uq2bt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_duya0"]
bg_color = Color(0, 0, 0, 0.709804)

[node name="world" type="Node3D"]
script = ExtResource("1_ofnld")
metadata/_edit_horizontal_guides_ = [31.0]

[node name="marker" parent="." instance=ExtResource("2_gcll6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 42.3621, 0, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 70, 0, 0)
fov = 85.2
near = 0.032
script = ExtResource("3_8x4wl")

[node name="earth_scene" parent="." instance=ExtResource("1_31fs6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.8147e-06)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("5_scv8l")

[node name="DataManager" type="Node3D" parent="."]
script = ExtResource("5_3j5ia")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("6_styet")

[node name="InfoPanel" type="Panel" parent="UI"]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="NamePanel" type="Panel" parent="UI/InfoPanel"]
clip_contents = true
layout_mode = 2
offset_left = 28.0
offset_top = 28.0
offset_right = 388.0
offset_bottom = 147.0
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_duya0")

[node name="CityLabel" type="RichTextLabel" parent="UI/InfoPanel/NamePanel"]
layout_mode = 1
offset_left = 27.0
offset_top = 7.0
offset_right = 376.0
offset_bottom = 74.0
theme = ExtResource("6_uq2bt")
text = "London"

[node name="CountryLabel" type="RichTextLabel" parent="UI/InfoPanel/NamePanel"]
layout_direction = 3
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -52.0
offset_right = 327.0
offset_bottom = -8.0
grow_vertical = 0
theme = ExtResource("6_uq2bt")
theme_override_font_sizes/normal_font_size = 19
text = "United Kingdom"

[node name="CostContainer" type="Panel" parent="UI/InfoPanel"]
clip_contents = true
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -480.0
offset_top = 31.0
offset_right = -18.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 2

[node name="CostPanel" type="VBoxContainer" parent="UI/InfoPanel/CostContainer"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -190.0
offset_top = 18.0
offset_right = 205.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_constants/separation = 0

[node name="CostLabel" type="RichTextLabel" parent="UI/InfoPanel/CostContainer/CostPanel"]
layout_mode = 2
theme = ExtResource("6_uq2bt")
text = "Cost"
fit_content = true

[node name="FilterPanel" type="Panel" parent="UI"]
layout_direction = 2
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -520.083
offset_right = 623.0
offset_bottom = -22.083
grow_vertical = 0

[node name="FilterContainer" type="VBoxContainer" parent="UI/FilterPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollapseFilter" type="Button" parent="UI/FilterPanel"]
layout_mode = 2
offset_top = -31.0
offset_right = 187.0
grow_vertical = 0
size_flags_horizontal = 0
text = "Filters"

[connection signal="zoomed" from="Camera3D" to="." method="_on_camera_3d_zoomed"]
[connection signal="pressed" from="UI/FilterPanel/CollapseFilter" to="UI" method="_on_collapse_filter_pressed"]
